# coincidence

./: CMakeLists.txt  Input file explained.md  Makefile  README.md  input.json  input.txt
demo/: CMakeLists.txt  SimpleExample.cpp  demo.cpp  demo.json
include/: cmdParser.h  event.h  example.h  getInput.h  gui.h  loadChannel.h  loadCoincidences.h  loadEvents.h
source/: coincidence.cc  coincidence.h  events.h  getInputParameters.cc  getInputParameters.h  getPlot.cc  getPlot.h  getTimeStamp.cc  getTimeStamp.h  main.cc  output.cc  output.h  readData.cc  readData.h  rejection.cc  rejection.h
src/: CMakeLists.txt  getInput.cpp  getInput.h  loadChannel.cpp  loadCoincidences.cpp  loadEvents.cpp
src/gui/: CMakeLists.txt  demo.cpp  gui.cpp
src/gui_example/: CMakeLists.txt  demo.cpp  example.cpp
test/: CMakeLists.txt  CsCalibration  CsCalibration.json  compareOutput.sh  getInputTest.cpp  getInputTest.json  input.txt  inputCoincidencesTest.json  inputTest.json  loadChannelTest.cpp  loadChannelTest.json  loadCoincidencesTest.cpp  loadCoincidencesTest.json  loadEventsTest.cpp  main  runTest.sh  test.json
test/output/: PH_channel 0  PH_channel 1  PI_channel 0  PI_channel 1  Pulse integral_channel 1  Time stamp_channel 0
test/output_expected/: Pulse integral_channel 0  TOF_0.400000_4_7.txt  Time stamp_channel 1  timediff_DIACFD  timediff_Header  timestamp_DIACFD_CH0  timestamp_DIACFD_CH1  timestamp_Header_CH0  timestamp_Header_CH1
test/testdata/: Good pulses - channel 0  Good pulses - channel 1  Pulse integral - channel 0  TOF Header  Time stamp - channel 1  input.json
unitest/: CMakeLists.txt  getInputTest  getInputTest.cpp  getInputTest.json  loadChannelTest  loadChannelTest.cpp  loadChannelTest.json  loadCoincidencesTest  loadCoincidencesTest.cpp  loadCoincidencesTest.json
unitest/output/: PH - channel 0  TOF Header  Time stamp - channel 0  Time stamp - channel 1
unitest/testdata/: PI - channel 0  TOF DIACFD  sincCoef.txt
